--- a/index.html
+++ b/index.html
@@ -18,18 +18,7 @@
         <div class="container">
             <div class="header_inner">
                 <img src="img/logo.svg" alt="" class="logo">
-                <nav class="menu">
-                    <ul class="list_menu">
-                        <li class="link_menu"><a href="#" class="href_link_menu">Data center services</a></li>
-                        <li class="link_menu"><a href="#" class="href_link_menu">Hosting</a></li>
-                        <li class="link_menu"><a href="#" class="href_link_menu">Cloud</a></li>
-                        <li class="link_menu"><a href="#" class="href_link_menu">Services </a></li>
-                    </ul>
-                </nav>
-                <div class="btn_call"><a href="#" class="href_btn_call header">Call Me Now</a></div>
-                <div class="burger_header">
-                    <span></span>
-                </div>
+                <div class="btn_call"><a href="feedback.html" class="href_btn_call header">Call Me Now</a></div>
             </div>
         </div>
     </header>
@@ -40,7 +29,7 @@
                 <div class="left_block_main">
                     <div class="main_title">Dedicated server <span class="yellow_span">in Europe</span> as a gift</div>
                     <div class="sub_title_main">Rent a server for 6 months and get it for free after that!</div>
-                    <div class="btn_call"><a href="#" class="href_btn_call">Get your server</a></div>
+                    <div class="btn_call"><a href="feedback.html" class="href_btn_call">Get your server</a></div>
                 </div>
                 <div class="right_block_main">
                     <img src="img/main_img.png" alt="">
@@ -174,7 +163,7 @@
                         <div class="services_text_price">1 database</div>
                         <div class="services_text_price">∞ traffik</div>
                         <div class="services_text_price">∞ domains</div>
-                        <div class="btn_block_price"><a href="#" class="href_btn_block_price">Start of $1.88/mo</a>
+                        <div class="btn_block_price"><a href="feedback.html" class="href_btn_block_price">Start of $1.88/mo</a>
                         </div>
                     </div>
                     <div class="block_price">
@@ -185,7 +174,7 @@
                         <div class="services_text_price">1 database</div>
                         <div class="services_text_price">∞ traffik</div>
                         <div class="services_text_price">∞ domains</div>
-                        <div class="btn_block_price"><a href="#" class="href_btn_block_price">Start of $2.98/mo</a>
+                        <div class="btn_block_price"><a href="feedback.html" class="href_btn_block_price">Start of $2.98/mo</a>
                         </div>
                     </div>
                     <div class="block_price">
@@ -196,7 +185,7 @@
                         <div class="services_text_price">1 database</div>
                         <div class="services_text_price">∞ traffik</div>
                         <div class="services_text_price">∞ domains</div>
-                        <div class="btn_block_price"><a href="#" class="href_btn_block_price">Start of $4.98/mo</a>
+                        <div class="btn_block_price"><a href="feedback.html" class="href_btn_block_price">Start of $4.98/mo</a>
                         </div>
                     </div>
                 </div>
@@ -285,7 +274,7 @@
         <div class="container">
             <div class="footer_inner">
                 <img src="img/logo_foot.jpg" alt="" class="logo">
-                <div class="btn_call"><a href="#" class="href_btn_call">Call Me Now</a></div>
+                <div class="btn_call"><a href="feedback.html" class="href_btn_call">Call Me Now</a></div>
             </div>
         </div>
     </footer>
