--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="main_inner">
                 <div class="left_block_main">
-                    <div class="main_title">Dedicated server <span class="yellow_span">in Europe</span> as a gift</div>
+                    <div class="main_title title">Dedicated server <span class="yellow_span">in Europe</span> as a gift</div>
                     <div class="sub_title_main">Rent a server for 6 months and get it for free after that!</div>
                     <div class="btn_call"><a href="feedback.html" class="href_btn_call">Get your server</a></div>
                 </div>
